# neuralnetworks

./: README.md  pyproject.toml
notebooks/: zero_to_hero_lecture_1.ipynb
notebooks/.ipynb_checkpoints/: zero_to_hero_lecture_1-checkpoint.ipynb
